--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "homepage": "https://whaletechie.github.io/turtles-of-kas",
   "dependencies": {
+    "@supabase/supabase-js": "^2.55.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
+    "tabletop": "^1.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
