--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "i18next": "^25.3.5",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.1",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "tabletop": "^1.6.3",
