--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "papaparse": "^5.5.3",
+    "pdfjs-dist": "^3.11.174",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-emoji-render": "^2.0.1",
     "react-i18next": "^15.6.1",
+    "react-pdf": "^6.2.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "tabletop": "^1.6.3",
